; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/abm/extr_main.c_nfp_abm_vnic_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/abm/extr_main.c_nfp_abm_vnic_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_app = type { i32 }
%struct.nfp_net = type { %struct.nfp_abm_link* }
%struct.nfp_abm_link = type { %struct.nfp_abm_link*, i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"left over qdiscs\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfp_app*, %struct.nfp_net*)* @nfp_abm_vnic_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfp_abm_vnic_free(%struct.nfp_app* %0, %struct.nfp_net* %1) #0 {
  %3 = alloca %struct.nfp_app*, align 8
  %4 = alloca %struct.nfp_net*, align 8
  %5 = alloca %struct.nfp_abm_link*, align 8
  store %struct.nfp_app* %0, %struct.nfp_app** %3, align 8
  store %struct.nfp_net* %1, %struct.nfp_net** %4, align 8
  %6 = load %struct.nfp_net*, %struct.nfp_net** %4, align 8
  %7 = getelementptr inbounds %struct.nfp_net, %struct.nfp_net* %6, i32 0, i32 0
  %8 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %7, align 8
  store %struct.nfp_abm_link* %8, %struct.nfp_abm_link** %5, align 8
  %9 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %5, align 8
  %10 = getelementptr inbounds %struct.nfp_abm_link, %struct.nfp_abm_link* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %5, align 8
  %13 = call i32 @nfp_abm_kill_reprs(i32 %11, %struct.nfp_abm_link* %12)
  %14 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %5, align 8
  %15 = getelementptr inbounds %struct.nfp_abm_link, %struct.nfp_abm_link* %14, i32 0, i32 1
  %16 = call i32 @radix_tree_empty(i32* %15)
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = call i32 @WARN(i32 %19, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %21 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %5, align 8
  %22 = getelementptr inbounds %struct.nfp_abm_link, %struct.nfp_abm_link* %21, i32 0, i32 0
  %23 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %22, align 8
  %24 = call i32 @kfree(%struct.nfp_abm_link* %23)
  %25 = load %struct.nfp_abm_link*, %struct.nfp_abm_link** %5, align 8
  %26 = call i32 @kfree(%struct.nfp_abm_link* %25)
  ret void
}

declare dso_local i32 @nfp_abm_kill_reprs(i32, %struct.nfp_abm_link*) #1

declare dso_local i32 @WARN(i32, i8*) #1

declare dso_local i32 @radix_tree_empty(i32*) #1

declare dso_local i32 @kfree(%struct.nfp_abm_link*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
